--- a/package.json
+++ b/package.json
@@ -45,7 +45,6 @@
 	"devDependencies": {
 		"@types/node": "^10.12.21",
 		"@types/vscode": "^1.39.0",
-		"typescript": "^3.3.1",
-		"tslint": "^5.12.1"
+		"typescript": "^3.3.1"
 	}
 }
